# chipo

./: .gitignore  Cargo.toml  README.md  build.sh  rust-toolchain
chipo/: Cargo.toml
chipo-native/: Cargo.toml
chipo-native/src/: lib.rs
chipo-native/src/media/: audio.rs  screen.rs
chipo-web/: Cargo.toml  index.html
chipo-web/src/: lib.rs
chipo-web/static/: main.css  main.js
chipo/src/: error.rs  lib.rs  parser.rs
chipo/src/emu/: instructions.rs  keycode.rs  mod.rs  proc.rs
roms/: audio.s  chipo.s  keyboard.s  test.s  timer.s
src/: lib.rs  main.rs  parser.rs
src/core/: instructions.rs
src/emu/: instructions.rs  mod.rs  proc.rs
src/media/: screen.rs
