[package]
name = "chipo"
version = "0.1.0"
authors = ["Paul Berg <paul.berg@etu.utc.fr>"]
edition = "2018"
default-run = "chipo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
sdl2 = "0.32"
colorful = "0.2.1"
structopt = "0.3.21"
