[package]
name = "chipo-web"
version = "0.1.0"
authors = ["Paul Berg <paul.berg@etu.utc.fr>"]
edition = "2018"

# Problems with wasm-opt
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
chipo = { path = "../chipo" }
